# bingo-gen

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: releas.yml
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_handler.rs  export.rs  lib.rs
crates/bingo-gen/: Cargo.toml
crates/bingo-gen/src/: main.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: card.rs  handle.rs  lib.rs  message.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  processor.rs  root.rs  ui.rs
crates/frontend/src/pages/: data_page.rs  generator_page.rs  mod.rs
