[workspace]
resolver = "3"
members = [
    "crates/*",
]

default-members = ["crates/bingo-gen"]

[workspace.package]
version = "0.1.1"
edition = "2024"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "debuginfo"

[workspace.dependencies]
backend = { path = "crates/backend" }
bridge = { path = "crates/bridge" }
frontend = { path = "crates/frontend" }

anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["std", "now"] }
gpui = "0.2.2"
gpui-component = "0.5.0"
itertools = "0.14.0"
log = "0.4.29"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
